@@ -44,19 +44,19 @@
 					<control type="group">
 						<visible>[!Container(525).HasFocus(1) + !Container(525).HasFocus(2) + !Container(525).HasFocus(3)] | [Container(525).HasFocus(1) + !stringcompare(Skin.String(movie.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(2) + !stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[42453])] | [Container(525).HasFocus(3) + !stringcompare(Skin.String(music.widget.type),$LOCALIZE[42453])]</visible>
 						<control type="list" id="82">
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41550])">Skin.SetString(movie.widget.type,$LOCALIZE[575])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41552])">Skin.SetString(movie.widget.type,$LOCALIZE[41550])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41550])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41551])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41553])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41550])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41550])">Skin.SetString(music.widget.type,$LOCALIZE[41555])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41554])">Skin.SetString(music.widget.type,$LOCALIZE[41550])</onup>
-							<onup condition="Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
-							<onup condition="!Skin.HasSetting(home.scrollablewidgets) | ![Container(525).HasFocus(1) | Container(525).HasFocus(2) | Container(525).HasFocus(3)]">525</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41550])">Skin.SetString(movie.widget.type,$LOCALIZE[575])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[41552])">Skin.SetString(movie.widget.type,$LOCALIZE[41550])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(1) + stringcompare(Skin.String(movie.widget.type),$LOCALIZE[575])">Skin.SetString(movie.widget.type,$LOCALIZE[41552])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41550])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41551])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41553])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41550])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(2) + stringcompare(Skin.String(tvshow.widget.type),$LOCALIZE[41551])">Skin.SetString(tvshow.widget.type,$LOCALIZE[41553])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41550])">Skin.SetString(music.widget.type,$LOCALIZE[41555])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41554])">Skin.SetString(music.widget.type,$LOCALIZE[41550])</onup>
+							<onup condition="!Skin.HasSetting(home.scrollablewidgets) + Container(525).HasFocus(3) + stringcompare(Skin.String(music.widget.type),$LOCALIZE[41555])">Skin.SetString(music.widget.type,$LOCALIZE[41554])</onup>
+							<onup condition="Skin.HasSetting(home.scrollablewidgets) | ![Container(525).HasFocus(1) | Container(525).HasFocus(2) | Container(525).HasFocus(3)]">525</onup>
 							<ondown>525</ondown>
 							<onleft>82</onleft>
 							<onright>82</onright>
